<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}"
    android:background="@drawable/dollar3" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="${packageName}.${activityClass}">

        <!-- Row 0 -->

        <!-- Row 1 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"></TableRow>

        <!-- Row 3 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:width="0dp"
                android:text="@string/tvHome"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCar"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:width="0dp"
                android:hint="@string/home_txt"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:width="0dp"
                android:text="@string/tvRoomNumber"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:width="0dp"
                android:text="@string/tvHomeType"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rbRent_txt" />

                <RadioButton
                    android:id="@+id/rbAd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbSale_txt" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv1_txt"
        android:textColor="#ABC"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ABC"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="${packageName}.${activityClass}" >

    </RelativeLayout>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:onClick="onClick"
        android:text="@string/btnCalc_text" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:text="@string/btnClear_text" />

</LinearLayout>