<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/tv2_txt"
        android:textColor="#748B97"
        android:textSize="24sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <ImageView
            android:id="@+id/imv1"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/apartment" />

        <ImageView
            android:id="@+id/imv2"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/dublex" />

        <ImageView
            android:id="@+id/imv3"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/triplex" />
        
        <ImageView
            android:id="@+id/imv4"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/choosehome" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

    </RelativeLayout>

    <Button
        android:id="@+id/btnb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btna"
        android:layout_toRightOf="@+id/btna"
        android:onClick="onClick"
        android:text="@string/btnDublex_txt" />

    <Button
        android:id="@+id/btna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:text="@string/btnApartment_txt" />

    <Button
        android:id="@+id/btnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnb"
        android:layout_toRightOf="@+id/btnb"
        android:onClick="onClick"
        android:text="@string/btnTriplex_txt" />

</LinearLayout>